# emotion_diary

./: .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA.md  FLOWS.md  PRIVACY.md  README.md  RUNBOOK.md  SECURITY.md  agents.,md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: .gitignore  Makefile  make.bat  python_codebase_manifest_2025.md
docs/diagrams/: c4-l1-context.mmd  c4-l2-container.mmd  c4-l3-components.mmd  deployment.mmd  runtime-delete.mmd  runtime-evening-checkin.mmd  runtime-export.mmd
docs/source/: conf.py  index.rst  overview.rst
docs/source/reference/: index.rst
emotion_diary/: __init__.py  event_bus.py
emotion_diary/agents/: checkin_writer.py  dedup.py  delete.py  export.py  notifier.py  pet_render.py  router.py
emotion_diary/bot/: __init__.py  __main__.py  transport.py
emotion_diary/storage/: __init__.py  adapters.py  core.py
src/emotion_diary/: event_bus.py
src/emotion_diary/agents/: __init__.py  base.py  checkin_writer.py  dedup.py  delete.py  export.py  notifier.py  pet_render.py  router.py
src/emotion_diary/assets/: __init__.py
src/emotion_diary/bot/: __init__.py  __main__.py  transport.py
src/emotion_diary/storage/: adapters.py  core.py  models.py
tests/: conftest.py  test_agents_flow.py  test_event_bus.py  test_transport.py
