[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-diary"
version = "0.1.0"
description = "Emotion Diary Telegram bot with mood tracking and virtual pet sprites."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Emotion Diary Team" }
]
dependencies = [
  "psycopg[binary]>=3.1",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.2",
  "black>=24.3",
  "isort>=5.13",
  "bandit>=1.7",
  "coverage[toml]>=7.4",
  "pip-audit>=2.7",
  "pre-commit>=3.6",
]
docs = [
  "sphinx>=7.3",
  "sphinx-autobuild>=2024.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "emotion_diary",
  "emotion_diary.*",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E501"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict = false
plugins = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source_pkgs = ["emotion_diary.storage"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 85

[tool.bandit]
targets = ["src"]
exclude = ["tests"]
skips = ["B101"]

[tool.pip-audit]
strict = true
require-hashes = false
ignore-vulns = []
skip-editable = true

